# CMakeExperiments

./: CMakeLists.txt  Cmake_commands.txt  README.md  main.cpp
include/: text.h
src/: text.cpp
